--- a/frontend/chat/index.html
+++ b/frontend/chat/index.html
@@ -21,11 +21,11 @@
                         <li class="nav-item dropdown" id="accountBtn">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="/Profile/Settings">Settings</a>
-                                <a class="dropdown-item" href="/Profile">Profile</a>
+                                <a class="dropdown-item" href="/profile/settings">Settings</a>
+                                <a class="dropdown-item" href="/profile">Profile</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item text-danger" href="#" onclick="logout()">Logout</a>
-                                <a class="dropdown-item text-danger" href="/Profile/Delete">Delete</a>
+                                <a class="dropdown-item text-danger" href="/profile/delete">Delete</a>
                             </div>
                         </li>
                         <li class="nav-item" id="loginBtn">
