--- a/frontend/profile/settings/index.html
+++ b/frontend/profile/settings/index.html
@@ -62,6 +62,7 @@
                                     <ul class="list-unstyled">
                                         <li><a id="chgLooks" class="link-secondary" href="#">Change How You Appear</a></li>
                                         <li><a id="chgDetails" class="link-secondary" href="#">Change Account Details</a></li>
+                                        <li><a id="chgPasswd" class="link-secondary" href="#">Change Password</a></li>
                                         <li><a id="delete" class="link-danger" href="#">Delete Account</a></li>
                                     </ul>
                                 </div>
@@ -100,27 +101,16 @@
 
                 </div>
                 <div class="col-9" id="content">
-                    <h1>Change How You Appear</h1>
-                    <p>Here you can update your profile picture and customize how others see you.</p>
-                    <hr>
-                    <h2>Profile</h2>
-                    <img id="profileImg" src="/public/media/root/default_pfp.png" alt="Default Profile Picture">
-                    <br>
-                    <br>
-                    <label for="file-upload" class="custom-file-upload">
-                    Select a new profile picture
-                    </label>
-                    <input id="file-upload" type="file" accept=".png"/>
-                    <br>
-                    <br>
-                    <input type="text" id="editableText" value="Username Here">
-                    <br>
-                    <br>
-                    <p style="color: black;">This is what your messages would look like</p>
-                    <label for="usrColor">Change Color:</label><br>
-                    <input type="color" id="usrColor"><br>
-                    <button class="btn btn-primary" onclick="saveChanges()">Save Changes</button>
-
+                    <form id="changePassword">
+                        <label for="oldPasswd" class="form-label">Old Password</label>
+                        <input type="password" id="oldPasswd" class="form-control" placeholder="Old Password">
+                        <label for="newPasswd" class="form-label">New password</label>
+                        <input type="password" id="newPasswd" class="form-control" placeholder="New Password">
+                        <label for="newPasswdRe" class="form-label">Repeat New Password</label>
+                        <input type="password" id="newPasswdRe" class="form-control" placeholder="Repeat New Password">
+                        <button type="submit" class="btn btn-primary">Change Password</button>
+                        
+                    </form>
                 </div>
             </div>
         </div>
@@ -187,6 +177,14 @@
                     <h2>Change Account Details</h2>
                     <p>Update your email, password, and other account information here.</p>
                 `);
+            });
+            $('#chgPasswd').click(function(event) {
+                event.preventDefault();
+                $('#content').html(`
+                    <h2>Change Account Details</h2>
+                    <p>Update your email, password, and other account information here.</p>
+                `);
+                $("changePassword").addEventListener("submit", changePasswordSubmit)
             });
 
             // Change content for "Delete Account"
