fixing things again

--- a/frontend/profile/settings/index.html
+++ b/frontend/profile/settings/index.html
@@ -101,6 +101,7 @@
 
                 </div>
                 <div class="col-9" id="content">
+                    <div id="Alerts"></div>
                     <form id="changePassword">
                         <label for="oldPasswd" class="form-label">Old Password</label>
                         <input type="password" id="oldPasswd" class="form-control" placeholder="Old Password">
