--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -14,10 +14,7 @@
                 <div class="col-12 d-flex justify-content-center">
                     <ul class="nav nav-tabs w-100 justify-content-center" id="navbar" role="tablist">
                         <li class="nav-item">
-                            <a href="/" class="nav-link" aria-current="page">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="/chat" class="nav-link">Chat</a>
+                            <a href="/" class="nav-link">Chat</a>
                         </li>
                         <li class="nav-item" id="loginBtn">
                             <a href="/login" class="nav-link active">Login/Signup</a>
@@ -80,6 +77,7 @@
         <div id="accountBtn"></div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/3.2.1/jsencrypt.min.js"></script>
     <script src="/public/src/login.js">
     </script>
     <script src="/public/src/shared.js"></script>
