--- a/frontend/profile/settings/index.html
+++ b/frontend/profile/settings/index.html
@@ -14,10 +14,7 @@
                 <div class="col-12 d-flex justify-content-center">
                     <ul class="nav nav-tabs w-100 justify-content-center" id="navbar" role="tablist">
                         <li class="nav-item">
-                            <a href="/" class="nav-link" aria-current="page">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="/chat" class="nav-link">Chat</a>
+                            <a href="/" class="nav-link">Chat</a>
                         </li>
                         <li class="nav-item dropdown" id="accountBtn">
                             <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
