--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,12 +21,12 @@
                                 <a class="dropdown-item" href="/profile/settings">Settings</a>
                                 <a class="dropdown-item" href="/profile">Profile</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item text-danger" href="#" onclick="logout()">Logout</a>
+                                <a class="dropdown-item text-danger" href="#" onclick="keycloak.logout()">Logout</a>
                                 <a class="dropdown-item text-danger" href="/profile/delete">Delete</a>
                             </div>
                         </li>
                         <li class="nav-item" id="loginBtn">
-                            <a href="/login" class="nav-link">Login/Signup</a>
+                            <a onclick="keycloak.login()" href="#" class="nav-link">Login/Signup</a>
                         </li>
                     </ul>
                 </div>
@@ -77,6 +77,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     </body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/keycloak-js@latest/dist/keycloak.min.js"></script>
     <script src="/public/src/shared.js"></script>
+    
+    
     <script src="/public/src/chat.js"></script>
 </html>
