--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,7 +61,9 @@
                             <div id="friendsContent" class="friends-content visually-hidden">
                                 Friends Content
                             </div>
+                
                 </div>
+                <div class="" style="position:absolute; bottom: 130px; left:calc(70% + 20px); " id="timeUpdate"> ↑ <span id="up">100</span>ms | ↓ <span id="down">100</span>ms<input type="number" min="100" max="10000" step="1" id="socketPingIntChange" name="socketPingIntChange" value="1000" style="display:none;width:50px;"></div>
             
             <!-- Message input section at the bottom -->
             <form id="message-input" class="d-flex align-items-center justify-content-between p-3" style="position:absolute; bottom:10px; left:10px; right:10px; margin-bottom: 10px;">
