--- a/frontend/twTesting.html
+++ b/frontend/twTesting.html
@@ -10,8 +10,88 @@
 
 
 <div id="chat-window" class="ml-5 mt-5 mr-0 mb-0 w-full bg-neutral max-w-[70vw] min-w-[70vw] h-full flex flex-col max-h-full overflow-y-auto overflow-x-hidden whitespace-normal border border-primary rounded-xl p-4">
-        <div id="uuidOfMessage" class="rounded-md flex  flex-row message w-full min-w-full relative"><span class="text-primary">[</span><span class="text-red-600 ml-0.5 mr-0.5">${Sender} </span> <span class="text-green-600 align-bottom relative ml-0.5 mr-0.5 text-sm sm:text-md"> 11:29 PM </span> <span class="text-purple-600 align-bottom ml-0.5 mr-0.5 text-xs sm:text-sm"> ${senderIp} </span><span class="text-primary">]</span> <span class="text-primary no-underline ml-[10px] mr-[10px]"> really cool message that I totaly care about  </span><a class=" absolute right-0 align-bottom no-underline text-error hover:cursor-pointer min-w-[30px]" onclick="deleteMsg('uuidOfMessage'); document.getElementById('uuidOfMessage').remove()"> <svg class="fill-error stroke-black" viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M 27.9999 51.9063 C 41.0546 51.9063 51.9063 41.0781 51.9063 28 C 51.9063 14.9453 41.0312 4.0937 27.9765 4.0937 C 14.8983 4.0937 4.0937 14.9453 4.0937 28 C 4.0937 41.0781 14.9218 51.9063 27.9999 51.9063 Z M 27.9999 47.9219 C 16.9374 47.9219 8.1014 39.0625 8.1014 28 C 8.1014 16.9609 16.9140 8.0781 27.9765 8.0781 C 39.0155 8.0781 47.8983 16.9609 47.9219 28 C 47.9454 39.0625 39.0390 47.9219 27.9999 47.9219 Z M 22.2343 41.9687 L 33.7187 41.9687 C 35.3827 41.9687 36.3436 41.0547 36.4374 39.3906 L 37.3046 20.2656 L 38.6640 20.2656 C 39.2968 20.2656 39.8124 19.7266 39.8124 19.0937 C 39.8124 18.4375 39.2968 17.9219 38.6640 17.9219 L 33.3671 17.9219 L 33.3671 16.0234 C 33.3671 14.1953 32.1483 13.0469 30.4140 13.0469 L 25.5155 13.0469 C 23.7812 13.0469 22.5858 14.1953 22.5858 16.0234 L 22.5858 17.9219 L 17.2655 17.9219 C 16.6327 17.9219 16.0936 18.4375 16.0936 19.0937 C 16.0936 19.7266 16.6327 20.2656 17.2655 20.2656 L 18.6718 20.2656 L 19.5390 39.3906 C 19.6093 41.0547 20.5936 41.9687 22.2343 41.9687 Z M 24.9296 17.9219 L 24.9296 16.4688 C 24.9296 15.8359 25.3749 15.4141 26.0077 15.4141 L 29.8514 15.4141 C 30.5077 15.4141 30.9530 15.8359 30.9530 16.4688 L 30.9530 17.9219 Z M 23.6405 39.3906 C 23.1249 39.3906 22.7733 39.0156 22.7499 38.4531 L 22.1171 22.7266 C 22.0936 22.1875 22.4687 21.7890 23.0546 21.7890 C 23.5936 21.7890 23.9452 22.1641 23.9921 22.7266 L 24.5546 38.4297 C 24.5780 38.9922 24.2265 39.3906 23.6405 39.3906 Z M 27.9530 39.3672 C 27.3905 39.3672 26.9921 38.9922 26.9921 38.4297 L 26.9921 22.7266 C 26.9921 22.1875 27.3671 21.7890 27.9530 21.7890 C 28.5390 21.7890 28.9140 22.1875 28.9140 22.7266 L 28.9140 38.4297 C 28.9140 38.9922 28.5390 39.3672 27.9530 39.3672 Z M 32.2890 39.3906 C 31.7030 39.3906 31.3514 38.9922 31.3749 38.4297 L 31.9374 22.7266 C 31.9609 22.1641 32.3358 21.7890 32.8514 21.7890 C 33.4374 21.7890 33.8358 22.1875 33.8124 22.7266 L 33.1796 38.4531 C 33.1562 39.0156 32.8046 39.3906 32.2890 39.3906 Z"></path></g></svg></a></div>
+        <!-- <div id="uuidOfMessage" class="rounded-md flex  flex-row message w-full min-w-full relative"><span class="text-primary">[</span><span class="text-red-600 ml-0.5 mr-0.5">${Sender} </span> <span class="text-green-600 align-bottom relative ml-0.5 mr-0.5 text-sm sm:text-md"> 11:29 PM </span> <span class="text-purple-600 align-bottom ml-0.5 mr-0.5 text-xs sm:text-sm"> ${senderIp} </span><span class="text-primary">]</span> <span class="text-primary no-underline ml-[10px] mr-[10px]"> really cool message that I totaly care about  </span><a class=" absolute right-0 align-bottom no-underline text-error hover:cursor-pointer min-w-[30px]" onclick="deleteMsg('uuidOfMessage'); document.getElementById('uuidOfMessage').remove()"> <svg class="fill-error stroke-black" viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M 27.9999 51.9063 C 41.0546 51.9063 51.9063 41.0781 51.9063 28 C 51.9063 14.9453 41.0312 4.0937 27.9765 4.0937 C 14.8983 4.0937 4.0937 14.9453 4.0937 28 C 4.0937 41.0781 14.9218 51.9063 27.9999 51.9063 Z M 27.9999 47.9219 C 16.9374 47.9219 8.1014 39.0625 8.1014 28 C 8.1014 16.9609 16.9140 8.0781 27.9765 8.0781 C 39.0155 8.0781 47.8983 16.9609 47.9219 28 C 47.9454 39.0625 39.0390 47.9219 27.9999 47.9219 Z M 22.2343 41.9687 L 33.7187 41.9687 C 35.3827 41.9687 36.3436 41.0547 36.4374 39.3906 L 37.3046 20.2656 L 38.6640 20.2656 C 39.2968 20.2656 39.8124 19.7266 39.8124 19.0937 C 39.8124 18.4375 39.2968 17.9219 38.6640 17.9219 L 33.3671 17.9219 L 33.3671 16.0234 C 33.3671 14.1953 32.1483 13.0469 30.4140 13.0469 L 25.5155 13.0469 C 23.7812 13.0469 22.5858 14.1953 22.5858 16.0234 L 22.5858 17.9219 L 17.2655 17.9219 C 16.6327 17.9219 16.0936 18.4375 16.0936 19.0937 C 16.0936 19.7266 16.6327 20.2656 17.2655 20.2656 L 18.6718 20.2656 L 19.5390 39.3906 C 19.6093 41.0547 20.5936 41.9687 22.2343 41.9687 Z M 24.9296 17.9219 L 24.9296 16.4688 C 24.9296 15.8359 25.3749 15.4141 26.0077 15.4141 L 29.8514 15.4141 C 30.5077 15.4141 30.9530 15.8359 30.9530 16.4688 L 30.9530 17.9219 Z M 23.6405 39.3906 C 23.1249 39.3906 22.7733 39.0156 22.7499 38.4531 L 22.1171 22.7266 C 22.0936 22.1875 22.4687 21.7890 23.0546 21.7890 C 23.5936 21.7890 23.9452 22.1641 23.9921 22.7266 L 24.5546 38.4297 C 24.5780 38.9922 24.2265 39.3906 23.6405 39.3906 Z M 27.9530 39.3672 C 27.3905 39.3672 26.9921 38.9922 26.9921 38.4297 L 26.9921 22.7266 C 26.9921 22.1875 27.3671 21.7890 27.9530 21.7890 C 28.5390 21.7890 28.9140 22.1875 28.9140 22.7266 L 28.9140 38.4297 C 28.9140 38.9922 28.5390 39.3672 27.9530 39.3672 Z M 32.2890 39.3906 C 31.7030 39.3906 31.3514 38.9922 31.3749 38.4297 L 31.9374 22.7266 C 31.9609 22.1641 32.3358 21.7890 32.8514 21.7890 C 33.4374 21.7890 33.8358 22.1875 33.8124 22.7266 L 33.1796 38.4531 C 33.1562 39.0156 32.8046 39.3906 32.2890 39.3906 Z"></path></g></svg></a></div> -->
+        <div id="${messageId}" class="message rounded-md relative flex flex-row"><!--<span><img width="30px" height="30px" class="rounded-full block" id="pfp" src="/public/media/root/default_pfp.png"> </span>--><span class="text-primary">[</span><span class="text-red-600 ml-0.5 mr-0.5">${Sender} </span> <span class="text-secondary align-bottom relative ml-0.5 mr-0.5 text-sm sm:text-md"> ${time} </span> <span class="text-accent italic align-bottom ml-0.5 mr-0.5 text-xs sm:text-sm"> ${senderIp} </span><span class="text-primary">]</span> <p class="text-primary" style="margin-left:10px; margin-right:10px"> ${message} </p>
+        <!-- <div class=" message bg-base-300 rounded-md flex flex-col">
+          <div class="text-6xl text-center text-primary font-bold mt-[10px]">Help menu</div>
+          <div class="text-sm text-secondary mx-[10px] my-[10px] text-center">Arguments wrapped in [] are required, arguments wrapped in () are optional. Arguments are listed in order</div>
+          <div class="overflow-auto h-96 w-full scrollbar-none">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>Command</th>
+                  <th>Arguments</th>
+                  <th>Implemented</th>
+                  <th>Description</th>
+                  <th>Copy/Use</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="hover">
+                  <td>help</td>
+                  <th>(command)</th>
+                  <th><input type="checkbox" class="checkbox checkbox-primary checkbox-lg" disabled checked></th>
+                  <th>Displays this help menu, optionaly displays in-depth help with a certian command</th>
+                  <th><button onclick="  navigator.clipboard.writeText('!help (command)');" class="btn btn-primary btn-sm">Copy</button><button onclick="document.getElementById('message').value += ' !help (command)'" class="btn btn-secondary btn-sm">Use</button></th>
+
+                </tr>
+                <tr class="hover">
+                  <td>channels list</td>
+                  <th>NONE</th>
+                  <th><input type="checkbox" class="checkbox checkbox-primary checkbox-lg" disabled checked></th>
+                  <th>Lists all avalible channels to the user, excluding private channels</th>
+                  <th><button onclick="  navigator.clipboard.writeText('!channels list');" class="btn btn-primary btn-sm">Copy</button><button onclick="document.getElementById('message').value += ' !channels list'" class="btn btn-secondary btn-sm">Use</button></th>
+                </tr>
+                <tr class="hover">
+                  <td>channels create</td>
+                  <th>[private | public] [name]</th>
+                  <th><input type="checkbox" class="checkbox checkbox-primary checkbox-lg" disabled checked></th>
+                  <th>Creates a new channel with the specified name and access, defaults to public if no valid option is present</th>
+                  <th><button onclick="  navigator.clipboard.writeText('!channels create public [name]');" class="btn btn-primary btn-sm">Copy</button><button onclick="document.getElementById('message').value += ' !channels create public [name]'" class="btn btn-secondary btn-sm">Use</button></th>
+                </tr>
+                <tr class="hover">
+                  <td>channels access</td>
+                  <th>[Email] (Channel Id) (add | remove)</th>
+                  <th><input type="checkbox" class="checkbox checkbox-primary checkbox-lg" disabled ></th>
+                  <th>Changes a user's access to the specified channel, if no channel is specified it uses current channel. Must be owner of channel to use. If add or remove is not specified, defaults to add</th>
+                  <th><button onclick="alert('this command isint implemented yet!')" class="btn btn-primary btn-sm">Copy</button><button onclick="alert('this command isint implemented yet!')" class="btn btn-secondary btn-sm">Use</button></th>
+                </tr>
+                <tr class="hover">
+                  <td>channels connect</td>
+                  <th>[Channel Id]</th>
+                  <th><input type="checkbox" class="checkbox checkbox-primary checkbox-lg" disabled checked></th>
+                  <th>Connects to the specified channel</th>
+                  <th><button onclick="  navigator.clipboard.writeText('!channels connect [cid]');" class="btn btn-primary btn-sm">Copy</button><button onclick="document.getElementById('message').value += ' !channels connect [cid]'" class="btn btn-secondary btn-sm">Use</button></th>
+                </tr>
+                <tr class="hover">
+                  <td>disconnect</td>
+                  <th>NONE</th>
+                  <th><input type="checkbox" class="checkbox checkbox-primary checkbox-lg" disabled checked></th>
+                  <th>Disconnects from websocket</th>
+                  <th><button onclick="  navigator.clipboard.writeText('!disconnect');" class="btn btn-primary btn-sm">Copy</button><button onclick="document.getElementById('message').value += ' !disconnect'" class="btn btn-secondary btn-sm">Use</button></th>
+                </tr>
+                <tr class="hover">
+                  <td>reconnect</td>
+                  <th>NONE</th>
+                  <th><input type="checkbox" class="checkbox checkbox-primary checkbox-lg" disabled checked></th>
+                  <th>Reconnects to the websocket once disconnected</th>
+                  <th><button onclick="navigator.clipboard.writeText('!reconnect');" class="btn btn-primary btn-sm">Copy</button><button onclick="document.getElementById('message').value += ' !reconnect'" class="btn btn-secondary btn-sm">Use</button></th>
+                </tr>
+                <tr class="hover">
+                  <td>clear</td>
+                  <th>NONE</th>
+                  <th><input type="checkbox" class="checkbox checkbox-primary checkbox-lg" disabled checked></th>
+                  <th>clears all messages from the window, Client side only</th>
+                  <th><button onclick="navigator.clipboard.writeText('!clear');" class="btn btn-primary btn-sm">Copy</button><button onclick="document.getElementById('message').value += ' !clear'" class="btn btn-secondary btn-sm">Use</button></th>
+                </tr>
+              </tbody>
+            </table>
+            
+          </div>
+          <div class="text-center text-sm text-secondary m-[10px]">More commands to come in the future, along with autocomplete</div> -->
 </div>
+
+
 <script>
   function deleteMsg(uuid){
 
